[gd_scene load_steps=14 format=2]

[ext_resource path="res://Bomb.gd" type="Script" id=1]
[ext_resource path="res://sprites/bomb/bomb1.png" type="Texture" id=2]
[ext_resource path="res://sprites/bomb/bomb2.png" type="Texture" id=3]
[ext_resource path="res://sprites/bomb/bomb3.png" type="Texture" id=4]
[ext_resource path="res://sprites/bomb/bomb4.png" type="Texture" id=5]
[ext_resource path="res://sprites/bomb/bomb5.png" type="Texture" id=6]
[ext_resource path="res://sprites/bomb/bomb_explodes1.png" type="Texture" id=7]
[ext_resource path="res://sprites/bomb/bomb_explodes2.png" type="Texture" id=8]
[ext_resource path="res://sprites/bomb/bomb_explodes3.png" type="Texture" id=9]
[ext_resource path="res://sprites/bomb/bomb_explodes4.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.89291, 3.07545 )

[sub_resource type="SpriteFrames" id=2]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 14.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Bomb" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 184
script = ExtResource( 1 )

[node name="Collidor" type="CollisionShape2D" parent="."]
position = Vector2( -0.403191, 0.920185 )
shape = SubResource( 1 )

[node name="Falling_animation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 14
speed_scale = 1.4
playing = true

[node name="Explode_animation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0.0877914, 5.96984 )
frames = SubResource( 3 )
[connection signal="animation_finished" from="Explode_animation" to="." method="_on_Explode_animation_animation_finished"]
